# TesteC

./: CMakeLists.txt  README.md  Teste_teste_new.txt
Aula1/: Ficha 1.docx  Ficha 2.docx
Aula1/Ficha1-Soluções/Ficha1/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
Aula2/Ficha2-Soluções/Ficha2/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
Aula3/: Ficha 3.docx
Aula3/Ficha3-Solucoes/Ficha3/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
Aula4/: Ficha 4.docx
Aula4/Ficha4 - Soluções/Ficha4/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
Aula5/: Ficha 5.docx
Aula5/Ficha 5 - Solucões/Ficha 5/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
Aula6/: Ficha 6.docx
Aula6/Ficha6 - Soluções/Ficha6/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
aula1-2/exercicios1/: exercicio_loop_contagem_regressiva.c  exercicio_notas.c  exercicio_switch_case_dias.c  exercicio_variaveis.c
aula1-2/exercicios1/output/: exercicio_loop_contagem_regressiva
aula1-2/ficha1/: ex1_ficha1.c  ex2_ficha1.c  ex3_ficha1.c  ex4_ficha1.c  ex5_ficha1.c
aula1-2/ficha1-solucoes/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
aula1-2/ficha2/: ex1_ficha2.c  ex2_ficha2.c  ex3_ficha2.c  ex4_ficha2.c  ex5_ficha2.c
aula1-2/ficha2_soluoes/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
aula3/: ex_juntar_strings_arrays.c
aula4-5/: ex_temperaturas.c  ex_temperaturs_resolucao.c
aula4-5/output/: ex_disciplinas  ex_temperaturas  ex_temperaturs_resolucao
aula5/: ex_disciplinas.c
aula5/output/: ex_disciplinas
aula6/: ex_jogo_de_galo.c  ex_matriz.c
aula6/output/: ex_matriz
aula7/: ex_jogo.c
aula7/Aula7/: Ficha 7.docx
aula7/Aula7/Ficha7-Soluções/Ficha7/: Ex1.c
